Updated brand guideline content and fixed images for dark theme

--- a/docs/documentation/branding.mdx
+++ b/docs/documentation/branding.mdx
@@ -16,23 +16,31 @@ This visual style guideline defines rules and standards that communicate how our
 Our logo is an essential for our brand. It should be used consistently across all communications.
 
 ### Brandmark
-Our brandmark is our most recognizable brand asset. Use the brandmark on its own only if you do not have enough room for the full logo or in cases when the NFT Valuations brand has already been established. The brandmark can exist without the wordmark. Diagonal lines are at a 33.69-degree angle.
+Our brandmark is our most recognizable brand asset. Use the brandmark on its own only if you do not 
+have enough room for the full logo or in cases when the NFT Valuations brand has already been established. 
+The brandmark can exist without the wordmark. Diagonal lines are at a 33.69-degree angle.
 
-> **Note:** A minimum area of surrounding space is required across all visual communication. The exclusion zone must be relative to the size of the logo and is therefore equal to the width of the 2 column.
+A minimum area of surrounding space is required across all visual communication. 
+The exclusion zone must be relative to the size of the logo and is therefore equal to the width of the 2 column.
 
 ![Brandmark](/img/branding/brandmark.jpg)
 ![Brandmark](/img/branding/brandmark-w_guides.jpg)
 
 ### Logo
 Our logo includes both the brandmark and the wordmark, typeset in Helvetica Neue LT Pro 83 Heavy Extended and Helvetica Neue LT Pro 55 Roman.
-> **Note:** A minimum area of surrounding space is required across all visual communication. The exclusion zone must be relative to the size of the logo and is therefore equal to the width of the 3 column.
+
+A minimum area of surrounding space is required across all visual communication. The exclusion zone 
+must be relative to the size of the logo and is therefore equal to the width of the 3 column.
 
 ![Logo](/img/branding/logo.jpg)
 ![Logo](/img/branding/logo-w_guides.jpg)
 
 ### Logo Vertical
-Our logo includes both the brandmark and the wordmark, typeset in Helvetica Neue LT Pro 83 Heavy Extended and Helvetica Neue LT Pro 55 Roman. Diagonal lines are at a 33.69-degree angle.
-> **Note:** A minimum area of surrounding space is required across all visual communication. The exclusion zone must be relative to the size of the logo and is therefore equal to the width of the 3 column.
+Our logo includes both the brandmark and the wordmark, typeset in Helvetica Neue LT Pro 83 Heavy 
+Extended and Helvetica Neue LT Pro 55 Roman. Diagonal lines are at a 33.69-degree angle.
+
+A minimum area of surrounding space is required across all visual communication. The exclusion zone 
+must be relative to the size of the logo and is therefore equal to the width of the 3 column.
 
 ![Logo vertical](/img/branding/logo-vertical.jpg)
 ![Logo vertical](/img/branding/logo-vertical-w_guides.jpg)
@@ -112,7 +120,9 @@ White <Highlight color="#eae9ed" text="dark" block>#eae9ed</Highlight>
 
 ## Typography
 Typography makes up a large part of our visual identity.
-> **Note:** Use Helvetica Neue LT Pro in printed materials and other static work. Inter should only be used in editable documents, including but not limited to websites.
+
+Use Helvetica Neue LT Pro in printed materials and other static work. Inter should 
+only be used in editable documents, including but not limited to websites.
 
 <Tabs>
   <TabItem value="desktop" label="Desktop" default>
@@ -131,13 +141,14 @@ Typography makes up a large part of our visual identity.
 
 ## Photography
 Our photography assets say a lot about our personality and what we are trying to communicate.
+
 Relatable, community, human, confident, clear, concise, focused, aspirational, demonstrates the NFT Valuations personality.
 <img
   src={require('/static/img/branding/photography.jpg').default}
   alt="Photography"
 />
 
-> **Note:** Images in printed collateral should be 300dpi in resolution to prevent pixelation. For screen applications, 72dpi is standart.
+Images in printed collateral should be 300dpi in resolution to prevent pixelation. For screen applications, 72dpi is standart.
 
 
 ### What To Avoid
@@ -145,6 +156,7 @@ Pixelated or low resolution images. Photography with lacks genuine warmth and hu
 
 ## Mascot
 Mascot is brand representative and plays an important role within our identity.
+
 Mascot is used to convey various states in order to enhance user experience.
 <Tabs>
   <TabItem value="primary" label="Primary" default>
@@ -166,7 +178,8 @@ This section includes some of the best practice examples of NFT Valuations marke
 
 ### Design
 The main design element of NFT Valuations is used acros all communications when applicable.
-> **Note:** Diagonal graphic elements should be kept at a 33.69-degree angle.
+
+Diagonal graphic elements should be kept at a 33.69-degree angle.
 
 <img
   src={require('/static/img/branding/design.jpg').default}
@@ -196,54 +209,91 @@ Icons are used across different brand touchpoints.
   src={require('/static/img/branding/showcase_01.jpg').default}
   alt="Showcase"
 />
+
+> Diagonal graphic elements should be kept at a 33.69-degree angle.
+
 <img
   src={require('/static/img/branding/showcase_02.jpg').default}
   alt="Showcase"
 />
+
+> Repetitive shapes and lines are associated with progression and intelligence and demonstrate the NFT 
+Valuations personality. Diagonal graphic elements should be kept at a 33.69-degree angle.
+
 <img
   src={require('/static/img/branding/showcase_03.jpg').default}
   alt="Showcase"
 />
+
+> Repetitive shapes and lines are associated with progression and intelligence and demonstrate the NFT Valuations personality.
+
 <img
   src={require('/static/img/branding/showcase_04.jpg').default}
   alt="Showcase"
 />
+
+> Repetitive shapes and lines are associated with progression and intelligence and demonstrate the NFT Valuations personality.
+
 <img
   src={require('/static/img/branding/showcase_05.jpg').default}
   alt="Showcase"
 />
+
+> Twitter page concept.
+
 <img
   src={require('/static/img/branding/showcase_06.jpg').default}
   alt="Showcase"
 />
+
+> Placeholder concept.
+
 <img
   src={require('/static/img/branding/showcase_07.jpg').default}
   alt="Showcase"
 />
+
+> To be used to convey various states in order to enhance user experience. Success states inform users that they achieved the goal.
+
 <img
   src={require('/static/img/branding/showcase_08.jpg').default}
   alt="Showcase"
 />
+
+> Featured image linked to a specific landing page.
+
 <img
   src={require('/static/img/branding/showcase_09.jpg').default}
   alt="Showcase"
 />
+
+> Featured image linked to a specific landing page.
+
 <img
   src={require('/static/img/branding/showcase_10.jpg').default}
   alt="Showcase"
 />
+
+> Featured image linked to a specific landing page.
+
 <img
   src={require('/static/img/branding/showcase_11.jpg').default}
   alt="Showcase"
 />
+
+> IG stories ads concept.
+
 <img
   src={require('/static/img/branding/showcase_12.jpg').default}
   alt="Showcase"
 />
 
+> Diagonal graphic elements should be kept at a 33.69-degree angle.
+
+
 ## Downloads
-<!-- [NFT Valuations Visual Style Guide v1.1](/static/img/branding/[NFT-V]_Visual-Style-Guideline_v1-1.pdf)
+[NFT Valuations Visual Style Guide v1.1](https://docs.nftvaluations.com/files/[NFT-V]_Visual-Style-Guideline_v1-1.pdf)
 
-[NFT Valuations Logo Downloads](/static/img/branding/[NFT-V]_Logo.zip)
+[NFT Valuations Logo Downloads](https://docs.nftvaluations.com/files/[NFT-V]_Logo.zip)
 
-[NFT Valuations Mascot Downloads](/static/img/branding/[NFT-V]_Mascot.zip) -->
+[NFT Valuations Mascot Downloads](https://docs.nftvaluations.com/files/[NFT-V]_Mascot.zip)
