Added portfolio management page under guides

--- a/docs/documentation/methodology.mdx
+++ b/docs/documentation/methodology.mdx
@@ -8,14 +8,14 @@ title: Methodology
 
 We continuously fetch transactions and events in order to determine NFT movements and sales across [supported marketplace(s)](#supported-marketplace) and collections' smart contracts (currently via Etherscan). We collect data on transactions, current prices, NFT properties, etc. and store them in our systems. We try to add additional properties such as rarity rank or additional properties that are not on the smart contracts (where possible).
 
-Currently we have deployed an optimal model for our valuation powered by Machine learning while we investigate how to create and automatically fine-tune models based on nature of each individual collection. We will share more about our work once the results are satisfactory at a later stage.
+Currently we have deployed an optimal model for our valuation powered by Machine Learning while we investigate how to create and automatically fine-tune models based on nature of each individual collection. We will share more about our work once the results are satisfactory at a later stage.
 :::
 
 ## Supported Collections
 We are actively looking into adding new collections to our website. Our statistic and valuations are based on what we currently support and show and not representative of the whole NFT space out there. Please note that even with supported collections, some data may be incomplete as we do not support every marketplace right now (please see [Supported Marketplace(s)](#supported-marketplace) for more)
 
 ## Valuation (Powered by Machine Learning)
-Currently we have deployed an optimal model for our valuation powered by Machine learning. Our model utilizes the token's properties as well as their most recent sale value & time.
+Currently we have deployed an optimal model for our valuation powered by Machine Learning. Our model utilizes the token's properties as well as their most recent sale value & time.
 We are actively investigating how to create and automatically fine-tune models based on nature of each individual collection. We will share more about our work once the results are satisfactory at a later stage.
 
 Valuation is the value that is output.
