Added new section for discrepancies with valuations

--- a/docs/documentation/branding.mdx
+++ b/docs/documentation/branding.mdx
@@ -1,12 +1,11 @@
 ---
-sidebar_position: 5
+sidebar_position: 3
+title: Branding
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Highlight from '@site/src/components/Highlight';
-
-# Branding
 
 ## Visual Style Guideline
 This visual style guideline defines rules and standards that communicate how our brand should be visually represented to the world.
