--- a/docs/documentation/methodology.mdx
+++ b/docs/documentation/methodology.mdx
@@ -79,7 +79,7 @@ The floor of a collection is the cheapest NFT that can be purchased from that co
 
 Example: If in a collection, the lowest sale price is 10 Ethereum and a rare property’s lowest price is 32 Ethereum, then the Collection Floor is 10 Ethereum and that rare property’s floor is 32 Ethereum.
 :::note
-Currently it may take up to 2 hours for the floor data to be updated. We are looking into an alternative implementation so we can get them in almost real time.
+Currently Floor data are being updated in near-real time. Please note that Floor data are syncing with a 15 minute delay. This was necessary to account for the blockchain block reorganization
 :::
 
 ## Volume
