BugFix the disclaimer url

--- a/docs/documentation/roadmap.mdx
+++ b/docs/documentation/roadmap.mdx
@@ -9,8 +9,8 @@ This page aims to provide an overview status of where we stand in regards to our
 
 ## Caveats and Challenges
 * NFTi and Adjusted Floor will often provide different valuations for perfectly good reasons. NFTi is aiming for a theoretical value for the token; Adjusted Floor reflects what is currently for sale. They are different lenses on the same question that can produce very different answers.
-* You should NOT assume that you should buy or sell an NFT based on Adjusted Floor or NFTi. It is possible that our values are wrong and it is also possible that our values are “right” but the price changes the next day.
-See our full [disclaimer](/disclaimer) here.
+* You should NOT assume that you should buy or sell an NFT based on Adjusted Floor or NFTi. It is possible that our values are wrong and it is also possible that our values are "right" but the price changes the next day.
+See our full [disclaimer](https://nftvaluations.com/disclaimer) here.
 *	Certain tokens in certain collections are simply misvalued right now. We are working through our model tuning on a collection-by-collection base to discover areas for improvement. If you see a token that you believe is misvalued, please let us know.
 *	The ultra-high-end aesthetic grails, particularly in generative art, are probably categorically undervalued right now as this feature is not represented in their metadata. We are working on new methods to adjust for this
 * The overall market capitalization data does not include all sources yet:
